--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
-    <string name="app_name">Activity1</string>
+    <string name="app_name">QR Code Scanner</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_starting">starting</string>
     <string name="title_activity_main3">Main3Activity</string>
+    <string name="user_object">USER_OBJECT</string>
+    <string name="error_required_field">Required Field</string>
+    <string name="error_invalid_password">Invalid Password</string>
+    <string name="error_incorrect_password">Incorrect password</string>
+    <string name="error_invalid_email">Invalid Email</string>
+    <string name="local_host_url">172.31.76.231:8080/QRCodeScannerAPI/api</string>
 </resources>
