--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,6 @@
     <string name="error_insufficient_length_password">Password must be atleast 4 characters long</string>
     <string name="error_caps_character_password">Password must contain a capital character</string>
     <string name="error_invalid_email">Invalid Email</string>
-    <string name="local_host_url">172.31.76.231:8080/QRCodeScannerAPI/api</string>
+    <string name="local_host_url">http://192.168.0.103:8080/QRCodeScannerAPI/api/</string>
     <string name="title_activity_result">Result</string>
 </resources>
